Added images, README, and started some code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Clipboard - Copy to the Cloud</title>
 </head>
 <body>
-  
+  <img src="./images/logo.svg" alt="">
+  <h1>A history of everything you copy</h1>
 </body>
 </html>
