More mobile style improvements

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           Instantly access your clipboard on all your devices.
         </p>
       </div>
-      <button>Download for iOS</button>
-      <button>Download for Mac</button>
+      <button class="button bg-color-primary center">Download for iOS</button>
+      <button class="button bg-color-secondary center">Download for Mac</button>
     </section>
     <div></div>
     <section class="flow flow-2">
@@ -52,10 +52,7 @@
           class="feature-picture"
         />
 
-        <ul
-          class="[ ] [] [ flow-2 flow text-start flex flex-column flex-align-start flex-justify-center ]"
-          role="list"
-        >
+        <ul class="[ ] [] [ flow-2 flow ]" role="list">
           <li>
             <h3>Quick Search</h3>
             <p>Easily search your snippets by content, category, web</p>
@@ -91,7 +88,7 @@
       />
     </section>
     <section>
-      <h1>Supercharge your workflow</h1>
+      <h2>Supercharge your workflow</h2>
       <p class="[] [ wrapper ] []">
         We’ve got the tools to boost your productivity.
       </p>
