Added a content div

--- a/index.html
+++ b/index.html
@@ -20,159 +20,161 @@
 
     <title>Clipboard - Copy to the Cloud</title>
   </head>
-  <body
-    class="[ ] [ ] [ flow-space-3 flow text-center color-text-secondary font-base ]"
-  >
-    <section class="flow flow-space-1">
-      <img
-        src="./images/logo.svg"
-        alt="Clipboard logo"
-        class="center margin-block-1"
-      />
-      <div class="wrapper center">
-        <h1>A history of everything you copy</h1>
-        <p class="[] [] [ ]">
-          Clipboard allows you to track and organize everything you copy.
-          Instantly access your clipboard on all your devices.
-        </p>
-      </div>
-      <button class="button bg-color-primary">Download for iOS</button>
-      <button class="button bg-color-secondary">Download for Mac</button>
-    </section>
-    <div></div>
-    <section class="flow flow-space-2">
-      <div>
-        <h2>Keep track of your snippets</h2>
-        <p class="wrapper center">
-          Clipboard instantly stores any item you copy in the cloud, meaning you
-          can access your snippets immediately on all your devices. Our Mac and
-          iOS apps will help you organize everything.
-        </p>
-      </div>
-
-      <div class="[ features ]">
+  <body class="[ ] [ ] [ flow text-center color-text-secondary font-base ]">
+    <div class="content flow-space-3 flow">
+      <section class="flow flow-space-1">
         <img
-          src="./images/image-computer.png"
-          alt="A desktop computer running Clipboard"
-          class="feature-picture"
+          src="./images/logo.svg"
+          alt="Clipboard logo"
+          class="center margin-block-1"
         />
+        <div class="wrapper center">
+          <h1>A history of everything you copy</h1>
+          <p class="[] [] [ ]">
+            Clipboard allows you to track and organize everything you copy.
+            Instantly access your clipboard on all your devices.
+          </p>
+        </div>
+        <button class="button bg-color-primary">Download for iOS</button>
+        <button class="button bg-color-secondary">Download for Mac</button>
+      </section>
+      <div></div>
+      <section class="flow flow-space-2">
+        <div>
+          <h2>Keep track of your snippets</h2>
+          <p class="wrapper center">
+            Clipboard instantly stores any item you copy in the cloud, meaning
+            you can access your snippets immediately on all your devices. Our
+            Mac and iOS apps will help you organize everything.
+          </p>
+        </div>
 
-        <ul class="flow-space-2 flow" role="list">
+        <div class="[ features ]">
+          <img
+            src="./images/image-computer.png"
+            alt="A desktop computer running Clipboard"
+            class="feature-picture"
+          />
+
+          <ul class="flow-space-2 flow" role="list">
+            <li>
+              <h3>Quick Search</h3>
+              <p>Easily search your snippets by content, category, web</p>
+            </li>
+            <li>
+              <h3>iCloud Sync</h3>
+              <p>Instantly saves and syncs snippets across all your devices.</p>
+            </li>
+            <li>
+              <h3>Complete History</h3>
+              <p>
+                Retrieve any snippets from the first moment you started using
+                the app.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <div></div>
+      <section class="flow-space-2 flow">
+        <div>
+          <h2>Access Clipboard anywhere</h2>
+          <p class="[] [ wrapper center ] []">
+            Whether you’re on the go, or at your computer, you can access all
+            your Clipboard snippets in a few simple clicks.
+          </p>
+        </div>
+
+        <img
+          src="./images/image-devices.png"
+          alt="iOS devices running Clipboard"
+          class="center"
+        />
+      </section>
+      <div></div>
+      <section class="flow-space-2">
+        <div>
+          <h2>Supercharge your workflow</h2>
+          <p class="[] [ wrapper center ] []">
+            We’ve got the tools to boost your productivity.
+          </p>
+        </div>
+        <ul class="[ tools ] [ ]" role="list">
           <li>
-            <h3>Quick Search</h3>
-            <p>Easily search your snippets by content, category, web</p>
-          </li>
-          <li>
-            <h3>iCloud Sync</h3>
-            <p>Instantly saves and syncs snippets across all your devices.</p>
-          </li>
-          <li>
-            <h3>Complete History</h3>
+            <img
+              class="center margin-block-1"
+              src="./images/icon-blacklist.svg"
+              alt=""
+            />
+            <h3>Create blacklists</h3>
             <p>
-              Retrieve any snippets from the first moment you started using the
-              app.
+              Ensure sensitive information never makes its way to your clipboard
+              by excluding certain sources.
+            </p>
+          </li>
+          <li>
+            <img
+              class="center margin-block-1"
+              src="./images/icon-text.svg"
+              alt=""
+            />
+            <h3>Plain text snippets</h3>
+            <p>
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
+          </li>
+          <li>
+            <img
+              class="center margin-block-1"
+              src="./images/icon-preview.svg"
+              alt=""
+            />
+            <h3>Sneak preview</h3>
+            <p>
+              Quick preview of all snippets on your Clipboard for easy access.
             </p>
           </li>
         </ul>
-      </div>
-    </section>
-    <div></div>
-    <section class="flow-space-2 flow">
-      <div>
-        <h2>Access Clipboard anywhere</h2>
-        <p class="[] [ wrapper center ] []">
-          Whether you’re on the go, or at your computer, you can access all your
-          Clipboard snippets in a few simple clicks.
-        </p>
-      </div>
-
-      <img
-        src="./images/image-devices.png"
-        alt="iOS devices running Clipboard"
-        class="center"
-      />
-    </section>
-    <div></div>
-    <section class="flow-space-2">
-      <div>
-        <h2>Supercharge your workflow</h2>
-        <p class="[] [ wrapper center ] []">
-          We’ve got the tools to boost your productivity.
-        </p>
-      </div>
-      <ul class="[ tools ] [ ]" role="list">
-        <li>
-          <img
-            class="center margin-block-1"
-            src="./images/icon-blacklist.svg"
-            alt=""
-          />
-          <h3>Create blacklists</h3>
+      </section>
+      <section>
+        <ul class="flex flex-row flex-justify-evenly flex-wrap" role="list">
+          <li class="margin-2">
+            <img src="./images/logo-google.png" alt="Google logo" />
+          </li>
+          <li class="margin-2">
+            <img src="./images/logo-ibm.png" alt="IBM logo" />
+          </li>
+          <li class="margin-2">
+            <img src="./images/logo-microsoft.png" alt="Microsoft logo" />
+          </li>
+          <li class="margin-2">
+            <img src="./images/logo-hp.png" alt="Hewlett Packard logo" />
+          </li>
+          <li class="margin-2">
+            <img
+              src="./images/logo-vector-graphics.png"
+              alt="Vector Graphics logo"
+            />
+          </li>
+        </ul>
+      </section>
+      <div></div>
+      <section class="wrapper center flow-space-1 flow">
+        <div>
+          <h2>Clipboard for iOS and Mac OS</h2>
           <p>
-            Ensure sensitive information never makes its way to your clipboard
-            by excluding certain sources.
+            Available for free on the App Store. Download for Mac or iOS, sync
+            with iCloud and you’re ready to start adding to your clipboard.
           </p>
-        </li>
-        <li>
-          <img
-            class="center margin-block-1"
-            src="./images/icon-text.svg"
-            alt=""
-          />
-          <h3>Plain text snippets</h3>
-          <p>
-            Remove unwanted formatting from copied text for a consistent look.
-          </p>
-        </li>
-        <li>
-          <img
-            class="center margin-block-1"
-            src="./images/icon-preview.svg"
-            alt=""
-          />
-          <h3>Sneak preview</h3>
-          <p>
-            Quick preview of all snippets on your Clipboard for easy access.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <ul class="flex flex-row flex-justify-evenly flex-wrap" role="list">
-        <li class="margin-2">
-          <img src="./images/logo-google.png" alt="Google logo" />
-        </li>
-        <li class="margin-2">
-          <img src="./images/logo-ibm.png" alt="IBM logo" />
-        </li>
-        <li class="margin-2">
-          <img src="./images/logo-microsoft.png" alt="Microsoft logo" />
-        </li>
-        <li class="margin-2">
-          <img src="./images/logo-hp.png" alt="Hewlett Packard logo" />
-        </li>
-        <li class="margin-2">
-          <img
-            src="./images/logo-vector-graphics.png"
-            alt="Vector Graphics logo"
-          />
-        </li>
-      </ul>
-    </section>
-    <div></div>
-    <section class="wrapper center flow-space-1 flow">
-      <div>
-        <h2>Clipboard for iOS and Mac OS</h2>
-        <p>
-          Available for free on the App Store. Download for Mac or iOS, sync
-          with iCloud and you’re ready to start adding to your clipboard.
-        </p>
-      </div>
+        </div>
 
-      <button class="button bg-color-primary center">Download for iOS</button>
-      <button class="button bg-color-secondary center">Download for Mac</button>
-    </section>
-
+        <button class="button bg-color-primary center">Download for iOS</button>
+        <button class="button bg-color-secondary center">
+          Download for Mac
+        </button>
+      </section>
+      <div></div>
+    </div>
     <footer
       class="footer flex flex-row flex-wrap flex-align-center flex-justify-evenly"
     >
