--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             class="feature-picture"
           />
 
-          <ul class="flow-space-2 flow" role="list">
+          <ul class="flow-space-2 flow">
             <li>
               <h3>Quick Search</h3>
               <p>Easily search your snippets by content, category, web</p>
@@ -99,7 +99,7 @@
             We’ve got the tools to boost your productivity.
           </p>
         </div>
-        <ul class="[ tools ] [ ]" role="list">
+        <ul class="[ tools ] [ ]">
           <li>
             <img
               class="center margin-block-1"
@@ -137,7 +137,7 @@
         </ul>
       </section>
       <section>
-        <ul class="flex flex-row flex-justify-evenly flex-wrap" role="list">
+        <ul class="flex flex-row flex-justify-evenly flex-wrap">
           <li class="margin-2">
             <img src="./images/logo-google.png" alt="Google logo" />
           </li>
@@ -183,7 +183,7 @@
         src="./images/logo.svg"
         alt="Clipboard logo"
       />
-      <ul class="links" role="list">
+      <ul class="links">
         <li class="margin-1"><a href="">FAQs</a></li>
         <li class="margin-1"><a href="">Contact Us</a></li>
         <li class="margin-1"><a href="">Privacy Policy</a></li>
@@ -191,7 +191,7 @@
         <li class="margin-1"><a href="">Install Guide</a></li>
       </ul>
 
-      <ul class="flex flex-row flex-wrap" role="list">
+      <ul class="flex flex-row flex-wrap">
         <li class="margin-1">
           <a href=""><i class="fa-brands fa-facebook-square"></i></a>
         </li>
